--- a/Game.html
+++ b/Game.html
@@ -32,6 +32,8 @@
     Do it like Jesus!
 </h1>
 
+Your keys are A and D
+
 <div align="center">
     <canvas id="game-canvas" width="1200" height="400"></canvas>
 </div>
